--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ bio:                'Life, Anime, Japan, IT, and other interesting things'
 description:        "Han Yihong's blog site"
 reading_time:       false
 words_per_minute:   200
+logo:               'assets/img/logo.png'
+background:         'assets/img/background.jpg'
