--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ reading_time:       false
 words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/background.jpg'
+locale:             ja_JP
+url:                'http://Clynie.github.io'
+
