--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,4 @@ words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/background.jpg'
 locale:             ja_JP
-url:                'http://Clynie.github.io'
-
+url:                'https://Clynie.github.io'
