--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              Kira's Blog Site
-bio:                'Data Scientist, Climatologist, IT, Animate, and other interesting things'
+bio:                'Climatologist, Data Scientist, IT, Anime, and other interesting things'
 description:        "Doctor X's blog site"
 reading_time:       false
 words_per_minute:   200
@@ -53,7 +53,7 @@ github:             Clynie
 #dribbble:          username
 #youtube:            username
 #soundcloud:        username
-#weibo:             username
+weibo:             伊啦啦啦克
 #flickr:            username
 #codepen:           username
 #zhihu:              han-yi-hong-98
