--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ github:             Clynie
 #tumblr:             username
 #pinterest:         username
 #foursquare:        username
-#steam:              username
+steam:              xlynie
 #dribbble:          username
 #youtube:            username
 #soundcloud:        username
