add After Vitus trend

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,13 @@
   url: /projects/
 - title: Climate Projects
   url: /research/
+- title: Videos
+  url: /Video/
 - title: Life
   url: /life/
 - title: Notes
   url: /notes/
 - title: Algorithm
   url: /algorithm/
-- title: 文献推荐
+- title: Papers
   url: /papers/
